--- a/controller/static/app/images/images.html
+++ b/controller/static/app/images/images.html
@@ -113,7 +113,7 @@
                 <tr ng-repeat="i in filteredImages = (vm.images | filter:tableFilter)">
                     <td><div class="ui label" ng-repeat="t in i.RepoTags">{{t}}</div></td>
                     <td>{{i.Id.substring(0,12)}}</td>
-                    <td>{{i.Created * 1000 | date:'yyyy-MM-dd HH:mm:ss Z'}}</td>
+                    <td>{{i.Created}}</td>
                     <td>{{i.Engine.Name}}</td>
                     <td>{{i.VirtualSize / 1048576 | number:2}} MB</td>
                     <td class="collapsing">
